--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="banner_top">
                     <div class="logo">
                         <figure class="logo_img">
-                            <img src="/images/logo.png" alt="logo" title="logo">
+                            <img src="images/logo.png" alt="logo" title="logo">
                         </figure>
                     </div>
                     <div class="navbar">
@@ -44,7 +44,7 @@
                 </div>
                 <div class="banner_img">
                     <figure class="phone_img">
-                        <img src="/images/phone.png" alt="phone" title="phone">
+                        <img src="images/phone.png" alt="phone" title="phone">
                     </figure>
                 </div>
             </div>
