--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
             <div class="client_inner">
                 <div class="clients_img">
                     <figure class="map_img">
-                        <img src="images/map.png" alt="map" title="map">
+                        <a href="#"><img src="images/map.png" alt="map" title="map"></a>
                     </figure>
                 </div>
                 <div class="client_content">
@@ -417,10 +417,10 @@
                     <p>The rise of mobile devices transforms the way we consume information entirely and the world's most elevant channels such as Facebook.</p>
                     <div class="downloadImg_link">
                         <div class="playstore">
-                            <img src="images/playstore.png" alt="playstore" title="playstore">
+                            <a href="#"><img src="images/playstore.png" alt="playstore" title="playstore"></a>
                         </div>
                         <div class="appstore">
-                            <img src="images/appstore.png" alt="appstore" title="appstore">
+                            <a href="#"><img src="images/appstore.png" alt="appstore" title="appstore"></a>
                         </div>
                     </div>
                 </div>
@@ -451,10 +451,10 @@
                     </ul>
                 </div>
                 <div class="social_link">
-                    <i class="fa-brands fa-facebook-f"></i>
-                    <i class="fa-brands fa-twitter"></i>
-                    <i class="fa-solid fa-hashtag"></i>
-                    <i class="fa-brands fa-square-github"></i>
+                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#"><i class="fa-solid fa-hashtag"></i></a>
+                    <a href="#"><i class="fa-brands fa-square-github"></i></a>
                 </div>
                 <p>Copyright© Arifur Rahman Tushar 2019. All rights reserved</p>
             </div>
